Fix pointer glitch on Firefox 67.0.4
Using :hover to set cursor to pointer is redundant as using without has the same function. Using :hover also causes problems on Firefox 67.0.4 where the cursor will have artifacts around it.

--- a/webapp/titanembeds/static/css/embed.css
+++ b/webapp/titanembeds/static/css/embed.css
@@ -916,6 +916,11 @@ p.mentioned span.chatmessage {
 .wdt-emoji-picker {
   bottom: 16px;
   right: 42px;
+  cursor: pointer;
+}
+
+.wdt-emoji-picker:hover {
+  cursor: initial;
 }
 
 .wdt-emoji-picker span.emoji-outer.emoji-sizer {
